objects/ssot__CareMetricTarget__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareMetricUnitOfMeasureId__c</fullName>
        <label>Care Metric Unit Of Measure</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDurationNumber__c</fullName>
        <label>Due Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DueDurationUnitofMeasureId__c</fullName>
        <label>Due Duration Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__GoalAssignmentId__c</fullName>
        <label>Goal Assignment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Metric Target Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsOutcomePositive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Outcome Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LowerLimitNumber__c</fullName>
        <label>Lower Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MeasureCodeId__c</fullName>
        <label>Measure Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MeasureCodeObject__c</fullName>
        <label>Measure Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MetricCodeSetId__c</fullName>
        <label>Metric Code Set</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MetricType__c</fullName>
        <label>Metric Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NumericValue__c</fullName>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Patient__c</fullName>
        <label>Patient</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RatioDenominatorNumber__c</fullName>
        <label>Ratio Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RatioNumeratorNumber__c</fullName>
        <label>Ratio Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__UpperLimitNumber__c</fullName>
        <label>Upper Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValueDescription__c</fullName>
        <label>Value Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726406942_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareMetricTarget_Patient_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CareMetricTarget_Patient_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1716726406942_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726410399_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareMetricTarget_MeasureCodeId_map_C_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareMetricTarget_MeasureCodeId_map_C_rel</relationshipLabel>
        <relationshipName>rel_1716726410399_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726411879_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareMetricTarget_MeasureCodeId_map_C_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CareMetricTarget_MeasureCodeId_map_C_rel</relationshipLabel>
        <relationshipName>rel_1716726411879_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>